--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,52 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click."
     />
+    <!--Insert OG Markup -->
+
+    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
+
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:title"
+      content="Rapid Markdown Editor"
+    />
+
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:description"
+      content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click."
+    />
+
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:image"
-      content="https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png"
+      content="https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png)"
     />
+
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:url"
+      content="rapid-markdown-editor.netlify.app/"
+    />
+
+    <!--Insert Twitter Card Markup -->
+
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <meta name="twitter:site" content="iamrishavraj1" />
+
+    <meta name="twitter:domain" content="rapid-markdown-editor.netlify.app/" />
+
+    <meta name="twitter:title" content="Rapid Markdown Editor" />
+
+    <meta
+      name="twitter:description"
+      content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click."
+    />
+
+    <meta name="twitter:image" content="The image url" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
