Resolve OG Tags

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:image"
-      content="https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png)"
+      content="https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png"
     />
 
     <meta
@@ -57,6 +57,11 @@
     />
 
     <meta name="twitter:image" content="The image url" />
+
+    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Rapid Markdown Editor" />
+<meta prefix="og: http://ogp.me/ns#" property="og:type" content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click." />
+<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png" />
+<meta prefix="og: http://ogp.me/ns#" property="og:url" content="rapid-markdown-editor.netlify.app" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
