--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -13,55 +13,32 @@
       name="description"
       content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click."
     />
-    <!--Insert OG Markup -->
-
-    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
 
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:title"
-      content="Rapid Markdown Editor"
+      content="{Rapid Markdown Editor}"
     />
-
     <meta
-      prefix="og: http://ogp.me/ns#"
+      name="description"
       property="og:description"
       content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click."
     />
-
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:type"
+      content="{website}"
+    />
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:image"
-      content="https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png"
+      content="{https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png}"
     />
-
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:url"
-      content="rapid-markdown-editor.netlify.app/"
+      content="rapid-markdown-editor.netlify.app"
     />
-
-    <!--Insert Twitter Card Markup -->
-
-    <meta name="twitter:card" content="summary_large_image" />
-
-    <meta name="twitter:site" content="iamrishavraj1" />
-
-    <meta name="twitter:domain" content="rapid-markdown-editor.netlify.app/" />
-
-    <meta name="twitter:title" content="Rapid Markdown Editor" />
-
-    <meta
-      name="twitter:description"
-      content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click."
-    />
-
-    <meta name="twitter:image" content="The image url" />
-
-    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Rapid Markdown Editor" />
-<meta prefix="og: http://ogp.me/ns#" property="og:type" content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click." />
-<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png" />
-<meta prefix="og: http://ogp.me/ns#" property="og:url" content="rapid-markdown-editor.netlify.app" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
