--- a/public/index.html
+++ b/public/index.html
@@ -17,22 +17,18 @@
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:title"
-      content="{Rapid Markdown Editor}"
+      content="Rapid Markdown Editor"
     />
     <meta
       name="description"
       property="og:description"
       content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click."
     />
-    <meta
-      prefix="og: http://ogp.me/ns#"
-      property="og:type"
-      content="{website}"
-    />
+    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:image"
-      content="{https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png}"
+      content="./FinalRapid.png"
     />
     <meta
       prefix="og: http://ogp.me/ns#"
