Rewrite OGs tags

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,23 @@
       name="description"
       content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click."
     />
-
+    <!-- Social Sharing -->
     <meta
+      property="og:image"
+      content="https://user-images.githubusercontent.com/62508858/178119135-72299511-2eb7-4c33-93f1-bf9d77f81ee1.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="rapid-markdown-editor.netlify.app" />
+    <meta property="og:title" content="Markdown Editor" />
+    <meta
+      property="og:description"
+      content="Now create your own markdown document in a few minutes using Rapid Markdown Editor and the best feature is that you can save the document in PDF format with a single click."
+    />
+
+    <!-- <meta
       prefix="og: http://ogp.me/ns#"
       property="og:title"
       content="Rapid Markdown Editor"
@@ -34,7 +49,7 @@
       prefix="og: http://ogp.me/ns#"
       property="og:url"
       content="rapid-markdown-editor.netlify.app"
-    />
+    /> -->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
